--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ document.querySelectorAll('.dropdown > a').forEach(link => {
         </div>
       </div>
       <!-- Slide 4 -->
-      <div class="slide" style="background-image: url('pv.jpg');">
+      <div class="slide" style="background-image: url('img/33.jpg');">
         <div class="slide-content">
           <h2 class="slide-title">Join the Adventure</h2>
           <p class="slide-text">Every destination is a new story. Follow my journey and be inspired to create your own adventures.</p>
@@ -460,3 +460,4 @@ document.querySelectorAll('.dropdown > a').forEach(link => {
   <script src="main.js"></script>
 </body>
 </html>
+
